Add get ep by anime id endpoint
Works on #144
