# Shizou.Server/Controllers/AniDbEpisodes.cs
@@ -1,6 +1,7 @@
 ﻿using System.Collections.Generic;
 using System.Linq;
 using Microsoft.AspNetCore.Http;
+using Microsoft.AspNetCore.Http.HttpResults;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.EntityFrameworkCore;
 using Shizou.Data;
@@ -19,12 +20,25 @@ public class AniDbEpisodes : EntityGetController<AniDbEpisode>
     }
 
     [HttpGet("[action]/{id}")]
-    [SwaggerResponse(StatusCodes.Status200OK)]
+    [SwaggerResponse(StatusCodes.Status200OK, type: typeof(List<AniDbEpisode>))]
     [SwaggerResponse(StatusCodes.Status404NotFound)]
     [Produces("application/json")]
-    public ActionResult<List<AniDbEpisode>> ByAniDbFileId(int id)
+    public Results<Ok<List<AniDbEpisode>>, NotFound> ByAniDbFileId(int id)
     {
+        if (!Context.AniDbFiles.Any(f => f.Id == id))
+            return TypedResults.NotFound();
         var result = DbSet.AsNoTracking().Where(e => e.AniDbEpisodeFileXrefs.Any(xref => xref.AniDbFileId == id)).ToList();
-        return Ok(result);
+        return TypedResults.Ok(result);
+    }
+
+    [HttpGet("[action]/{id}")]
+    [SwaggerResponse(StatusCodes.Status200OK, type: typeof(List<AniDbEpisode>))]
+    [SwaggerResponse(StatusCodes.Status404NotFound)]
+    [Produces("application/json")]
+    public Results<Ok<List<AniDbEpisode>>, NotFound> ByAniDbAnimeId(int id)
+    {
+        if (!Context.AniDbAnimes.Any(a => a.Id == id))
+            return TypedResults.NotFound();
+        return TypedResults.Ok(DbSet.AsNoTracking().Where(e => e.AniDbAnimeId == id).ToList());
     }
 }
